login, menu, products

--- a/antsystems-frontend/src/styles.scss
+++ b/antsystems-frontend/src/styles.scss
@@ -35,6 +35,10 @@ body {
   background-color: #000C29;
  }
 
+ .text-blue-dark {
+  color: #50657E;
+}
+
  .bg-blue-med {
   background-color: #24384E;
  }
