--- a/antsystems-frontend/src/app/shell/shell.component.html
+++ b/antsystems-frontend/src/app/shell/shell.component.html
@@ -29,7 +29,7 @@
             <span routerLink="inventory" routerLinkActive="nav-icon-active" class="material-symbols-outlined nav-icon">
                 warehouse
             </span>
-            <span routerLink="inventory" routerLinkActive="nav-text-active" class="nav-text">Warehouse</span>
+            <span routerLink="inventory" routerLinkActive="nav-text-active" class="nav-text">Inventory</span>
         </div>
         <!-- Receiving -->
         <div class="flex items-center w-32 justify-center menu-item">
