--- a/antsystems-frontend/src/app/apps/inventory/products/product/product.component.scss
+++ b/antsystems-frontend/src/app/apps/inventory/products/product/product.component.scss
@@ -17,7 +17,7 @@
 }
 
 .product-container {
-    margin-block: 1.25rem;
+    margin-top: 1.25rem;
     margin-inline: 20px;
     border-radius: 10px;
     background: #FFF;
@@ -29,7 +29,7 @@
     }
 
     .content {
-        padding: 0.5rem 1.5rem 1.5rem 1.5rem;
+        padding: .5rem 1.5rem;
     }
 }
 
@@ -49,4 +49,14 @@
 
 :hover.nav-item {
     background-color: #a5a5a51a;
+}
+
+.form-section {
+    border-radius: 0px 0px 5px 5px;
+    background: rgba(199, 204, 207, 0.25);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.form-section-blue {
+    background-color: #ECF7FF;
 }
