--- a/antsystems-frontend/src/app/apps/inventory/products/product/product.component.html
+++ b/antsystems-frontend/src/app/apps/inventory/products/product/product.component.html
@@ -165,7 +165,7 @@
                                 class="block mb-1 text-xs font-medium text-gray-900 dark:text-white">Product Type</label>
                             <input formControlName="productType" type="text" id="product_type"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                placeholder="SKU">
+                                placeholder="Product Type">
                         </div>
                         <div class="w-1/6">
                             <label for="sub_product_type"
