--- a/antsystems-frontend/src/app/apps/inventory/products/products.component.html
+++ b/antsystems-frontend/src/app/apps/inventory/products/products.component.html
@@ -1,13 +1,13 @@
-<div class="product-status-container">
-    <app-status-card 
+<!-- <div class="product-status-container"> -->
+    <!-- <app-status-card 
         *ngFor="let item of data" 
         [title]="item.title" 
         [icon]="item.icon" 
         [products]="item.products"
         [categories]="item.categories"
         [color]="item.color">
-    </app-status-card>
-</div>
+    </app-status-card> -->
+<!-- </div> -->
 
 <div class="product-container">
     <div class="header flex justify-center items-center text-white font-semibold">Item Details</div>
