--- a/antsystems-frontend/src/app/apps/inventory/products/products.component.scss
+++ b/antsystems-frontend/src/app/apps/inventory/products/products.component.scss
@@ -4,15 +4,17 @@
     background: #F1F1F1;
     box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
     margin-inline: 20px;
-    height: 14rem;
+    // height: 14rem;
 
 
     display: grid;
     grid-gap: 19px;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    // grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-auto-columns: 1fr;
     align-content: center;
     justify-items: center;
+    padding: 1rem;
 
 }
 
