updated BE and product form

--- a/antsystems-frontend/src/app/shell/shell.component.html
+++ b/antsystems-frontend/src/app/shell/shell.component.html
@@ -1,8 +1,8 @@
 <div class="w-screen h-14 bg-blue-dark flex items-center px-6">
     <img src="../../assets/logoAntSystems_vertical2 1.png" alt="">
 </div>
-<div class="w-screen h-20 bg-blue-med">
-    <div class="module-nav px-64">
+<div class="w-screen h-14 bg-blue-med">
+    <div class="module-nav md:px-40 lg:px-64">
         <!-- Menu -->
         <div class="flex items-center w-32 justify-center menu-item">
             <span routerLink="menu" routerLinkActive="nav-icon-active" class="material-symbols-outlined nav-icon">
